@@ -41,12 +41,21 @@
         # found! check if needs update
         } else {
             rid <- res %>% collect(Inf) %>% `[[`("rid")
-            check_update <- bfcneedsupdate(bfc, rids=rid)
-            if(is.na(check_update)) check_update = TRUE
-            db_path <- ifelse(check_update,
-                              bfcdownload(bfc, rid=rid, ask=FALSE,
-                                          proxy=proxy),
-                              bfcpath(bfc, rids=rid))
+            tryCatch({
+                check_update <- bfcneedsupdate(bfc, rids=rid)
+                if(is.na(check_update)) check_update = TRUE
+                db_path <- ifelse(check_update,
+                                  bfcdownload(bfc, rid=rid, ask=FALSE,
+                                              proxy=proxy),
+                                  bfcpath(bfc, rids=rid))
+            }, error=function(err) {
+
+                warning("Could not check database for updates.\n",
+                        "  Database source currently unreachable.\n",
+                        "  Using previously cached version.")
+                db_path <- bfcpath(bfc, rids=rid)
+            })
+
         }
     }
     unname(db_path)
